<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_menu"
    tools:context=".MainMenu">

    <ImageView
        android:id="@+id/back2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
...
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#878787" />
        </LinearLayout>

        <Button
            android:id="@+id/SignUp"
            android:layout_width="230dp"
            android:layout_height="37sp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="#0FB615"
            android:text="Đăng kí"
...
