...
                android:drawableLeft="@drawable/baseline_key_24"
                android:background="@color/white"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:text="Quên mật khẩu ?"
            android:textColor="@color/Black"
...
